package com.narxoz.rpg.bridge;

import com.narxoz.rpg.composite.CombatNode;

public class AreaSkill extends Skill {
    public AreaSkill(String skillName, int basePower, EffectImplementor effect) {
        super(skillName, basePower, effect);
    }

    @Override
    public void cast(CombatNode target) {
        int damage = resolvedDamage();
        System.out.println("[AOE] " + getSkillName() + " explodes on " + target.getName() + " group for " + damage + " " + getEffectName() + " damage!");
        target.takeDamage(damage);
    }
}
