' Generated by UML Generator
' Encoded: rLTDRnCn4BtdLrZYic6R2AuHH4rBePL2LJL57107PtUQMFNQaUqq2YtvxOoztY_lfg688d79okFncpVZvx5ph0rLPftndhvZOaKLpKZ2gTOJOnIRhmrS95BCs0yWRtfBbW99c4euz7hEYrnJbfw91HD07dg431GLgSn6QBTVyfu8sFX1z7RQjou3_8arcDmw0qWZZJyZmgLOz4SrIEkeri8Q8WCqcup8gSpcr5pA58w8DPqqJPW4v-Wsiry_FF533tqDUirDxsSzWzoMPx1XGe32DPY_MBYSv5gaUaIOC7R8vM94faoRTxdBs6SvKOfkdNqSLOakm7nrY56_Xcdpz-PcF7IwboprAwzTPBioZ-tAbjjgf6fhQ9fEiN0HnvzkoAbSMBmw_weM4mNKrSgL8Yw7aIla9SrAq2CofngkvCPIHmv716vl8J4ZSkQ-5zcAGmR2I6Lh4ITKcmYbXWpgErPmGmO80kgM9j16S6nsYSnMgCSFDACBY9hXomhjC42-thAjrRpCyIDJa7laIVuMR7mGzY9v2TIhvLQpXF8NW9ujQIetBm6C8mutRgzhOcgP_uMew5mRHJ51JwsaCsW5jyPcU6lPIw0uuA_-KYv5LOAgvZCd1LHqU1-GaW8j-JsaVYUhDSyvXTLqVlnmJIkIDPu3vMOPDKuWNXuqkGiOxmozAyH5CsnV9kXUEwOddDsx47CfEL3XyKwNZASAHDcvAd9Zwx92FkP60KHCf621cwslrEQPW6pxHJ2l-78OYSRMBLrEVjzebKnEk88x1oKhj6BqXs1NU15lCR6LrCpuwrG40ary8TfbUF8IQa8t-FNzjH49HEaIXRs38PEuBKzuT8aZxX17l4ySyI5nn9tYY0-B8pua3YoIPMN1duHgl1W-uVsxohUz70PrRRSVAuufqDlklQtfn0v3fPGDfq1vdip-yqqgY_-PCf7N_G6VheObFqc6fWYRcYuMVVjUMrPxeGw7u_hhCfYf68KphZ5t0VctPFLi6WmU2_VA680t9zeNI-s1CXm-TdbKRuqz3i6pOOzNumMmpwTrcTTIR4y6gNOxT4HnSwy7Wxrp0N3LnnsTuaZqoeRSD0UjrULQGmkc9V88n90VTmVQTEwLPpe4FGQHul-gNm
' URL: http://www.plantuml.com/plantuml/uml/rLTDRnCn4BtdLrZYic6R2AuHH4rBePL2LJL57107PtUQMFNQaUqq2YtvxOoztY_lfg688d79okFncpVZvx5ph0rLPftndhvZOaKLpKZ2gTOJOnIRhmrS95BCs0yWRtfBbW99c4euz7hEYrnJbfw91HD07dg431GLgSn6QBTVyfu8sFX1z7RQjou3_8arcDmw0qWZZJyZmgLOz4SrIEkeri8Q8WCqcup8gSpcr5pA58w8DPqqJPW4v-Wsiry_FF533tqDUirDxsSzWzoMPx1XGe32DPY_MBYSv5gaUaIOC7R8vM94faoRTxdBs6SvKOfkdNqSLOakm7nrY56_Xcdpz-PcF7IwboprAwzTPBioZ-tAbjjgf6fhQ9fEiN0HnvzkoAbSMBmw_weM4mNKrSgL8Yw7aIla9SrAq2CofngkvCPIHmv716vl8J4ZSkQ-5zcAGmR2I6Lh4ITKcmYbXWpgErPmGmO80kgM9j16S6nsYSnMgCSFDACBY9hXomhjC42-thAjrRpCyIDJa7laIVuMR7mGzY9v2TIhvLQpXF8NW9ujQIetBm6C8mutRgzhOcgP_uMew5mRHJ51JwsaCsW5jyPcU6lPIw0uuA_-KYv5LOAgvZCd1LHqU1-GaW8j-JsaVYUhDSyvXTLqVlnmJIkIDPu3vMOPDKuWNXuqkGiOxmozAyH5CsnV9kXUEwOddDsx47CfEL3XyKwNZASAHDcvAd9Zwx92FkP60KHCf621cwslrEQPW6pxHJ2l-78OYSRMBLrEVjzebKnEk88x1oKhj6BqXs1NU15lCR6LrCpuwrG40ary8TfbUF8IQa8t-FNzjH49HEaIXRs38PEuBKzuT8aZxX17l4ySyI5nn9tYY0-B8pua3YoIPMN1duHgl1W-uVsxohUz70PrRRSVAuufqDlklQtfn0v3fPGDfq1vdip-yqqgY_-PCf7N_G6VheObFqc6fWYRcYuMVVjUMrPxeGw7u_hhCfYf68KphZ5t0VctPFLi6WmU2_VA680t9zeNI-s1CXm-TdbKRuqz3i6pOOzNumMmpwTrcTTIR4y6gNOxT4HnSwy7Wxrp0N3LnnsTuaZqoeRSD0UjrULQGmkc9V88n90VTmVQTEwLPpe4FGQHul-gNm
' Generated on: 2026-03-15T15:48:02.966327

@startuml
skinparam classAttributeIconSize 0
hide circle

class RaidEngine {
  -random: Random = new Random(1L)
  --
  +setRandomSeed(seed: long): RaidEngine
  +runRaid(teamA: CombatNode, teamB: CombatNode, skillA: Skill, skillB: Skill): RaidResult
}

class RaidResult {
  -winner: String
  -rounds: int
  -log: List<String> = new ArrayList<>()
  --
  +getWinner(): String
  +setWinner(winner: String): void
  +getRounds(): int
  +setRounds(rounds: int): void
  +addLine(line: String): void
  +getLog(): List<String>
}

class AreaSkill {
  +AreaSkill(skillName: String, basePower: int, effect: EffectImplementor)
  +cast(target: CombatNode): void
}

interface EffectImplementor {
  ~computeDamage(basePower: int): int
  ~getEffectName(): String
}

class FireEffect {
  +computeDamage(basePower: int): int
  +getEffectName(): String
}

class IceEffect {
  +computeDamage(basePower: int): int
  +getEffectName(): String
}

class PhysicalEffect {
  +computeDamage(basePower: int): int
  +getEffectName(): String
}

class ShadowEffect {
  +computeDamage(basePower: int): int
  +getEffectName(): String
}

class SingleTargetSkill {
  +SingleTargetSkill(skillName: String, basePower: int, effect: EffectImplementor)
  +cast(target: CombatNode): void
}

abstract class Skill {
  -skillName: String
  -basePower: int
  -effect: EffectImplementor
  --
  #Skill(skillName: String, basePower: int, effect: EffectImplementor)
  +getSkillName(): String
  +getBasePower(): int
  +getEffectName(): String
  #resolvedDamage(): int
  +cast(target: CombatNode): void
}

interface CombatNode {
  ~getName(): String
  ~getHealth(): int
  ~getAttackPower(): int
  ~takeDamage(amount: int): void
  ~isAlive(): boolean
  ~getChildren(): List<CombatNode>
  ~printTree(indent: String): void
}

class EnemyUnit {
  +EnemyUnit(name: String, health: int, attackPower: int)
}

class HeroUnit {
  +HeroUnit(name: String, health: int, attackPower: int)
}

class PartyComposite {
  -name: String
  -children: List<CombatNode> = new ArrayList<>()
  --
  +PartyComposite(name: String)
  +add(node: CombatNode): void
  +remove(node: CombatNode): void
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
  +getChildren(): List<CombatNode>
  +printTree(indent: String): void
  -getAliveChildren(): List<CombatNode>
}

class RaidGroup {
  +RaidGroup(name: String)
}

abstract class UnitLeaf {
  -name: String
  -health: int
  -attackPower: int
  --
  #UnitLeaf(name: String, health: int, attackPower: int)
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
  +getChildren(): List<CombatNode>
  +printTree(indent: String): void
}

class Main {
  +{static} main(args: String[]): void
}

RaidEngine ..> RaidEngine
RaidEngine ..> CombatNode
RaidEngine ..> Skill
RaidEngine ..> RaidResult
AreaSkill --|> Skill
AreaSkill ..> CombatNode
AreaSkill ..> EffectImplementor
FireEffect ..|> EffectImplementor
IceEffect ..|> EffectImplementor
PhysicalEffect ..|> EffectImplementor
ShadowEffect ..|> EffectImplementor
SingleTargetSkill --|> Skill
SingleTargetSkill ..> CombatNode
SingleTargetSkill ..> EffectImplementor
Skill *-- EffectImplementor
Skill ..> CombatNode
EnemyUnit --|> UnitLeaf
HeroUnit --|> UnitLeaf
PartyComposite ..|> CombatNode
PartyComposite o-- CombatNode
RaidGroup --|> PartyComposite
UnitLeaf ..|> CombatNode
@enduml